# vdna

./: LICENSE  README.md  index.html  pyproject.toml
docs/: adding_your_feature_extractor.md
scripts/: save_activation_ranges.py
src/vdna/: __init__.py  distances.py  vdna_processor.py  version.py
src/vdna/networks/: __init__.py  clip.py  dino_resnet50.py  dino_vit.py  dinov2.py  feature_extraction_model.py  inception_pytorch.py  mugs_vit.py  random_resnet50.py  vgg16.py
src/vdna/utils/: im.py  io.py  settings.py  stats.py  utils.py
src/vdna/vdnas/: __init__.py  vdna_activation_ranges.py  vdna_base.py  vdna_features.py  vdna_gauss.py  vdna_hist.py  vdna_layer_gauss.py
static/css/: bulma-carousel.min.css  bulma.min.css  index.css
tests/: test_all.py  utils.py
tests/test_data/: index.txt
